--- a/index.html
+++ b/index.html
@@ -3,12 +3,39 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Star Rating</title>
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header></header>
-    <footer></footer>
+    <div class="star">
+      <i class="material-icons">star_border</i>
+      <button class="btn"></button>
+      <button class="btn"></button>
+    </div>
+    <div class="star">
+      <i class="material-icons">star_border</i>
+      <button class="btn"></button>
+      <button class="btn"></button>
+    </div>
+    <div class="star">
+      <i class="material-icons">star_border</i>
+      <button class="btn"></button>
+      <button class="btn"></button>
+    </div>
+    <div class="star">
+      <i class="material-icons">star_border</i>
+      <button class="btn"></button>
+      <button class="btn"></button>
+    </div>
+    <div class="star">
+      <i class="material-icons">star_border</i>
+      <button class="btn"></button>
+      <button class="btn"></button>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
