feat: star rating
-Add logic to js to handle star rating. Display 1/2 or full star depending on which button is clicked. Also make sure the accurate number of stars are highlighted depending on the rating.

--- a/index.html
+++ b/index.html
@@ -11,30 +11,35 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <h1>Rating:</h1>
     <div class="star">
       <i class="material-icons">star_border</i>
-      <button class="btn"></button>
-      <button class="btn"></button>
+      <button
+        id="btn-1"
+        class="btn"
+        onclick="calculateStarRating(this.id)"
+      ></button>
+      <button id="btn-2" class="btn" onclick="calculateStarRating(this.id)"></button>
     </div>
     <div class="star">
       <i class="material-icons">star_border</i>
-      <button class="btn"></button>
-      <button class="btn"></button>
+      <button id="btn-3" class="btn" onclick="calculateStarRating(this.id)"></button>
+      <button id="btn-4" class="btn" onclick="calculateStarRating(this.id)"></button>
     </div>
     <div class="star">
       <i class="material-icons">star_border</i>
-      <button class="btn"></button>
-      <button class="btn"></button>
+      <button id="btn-5" class="btn" onclick="calculateStarRating(this.id)"></button>
+      <button id="btn-6" class="btn" onclick="calculateStarRating(this.id)"></button>
     </div>
     <div class="star">
       <i class="material-icons">star_border</i>
-      <button class="btn"></button>
-      <button class="btn"></button>
+      <button id="btn-7" class="btn" onclick="calculateStarRating(this.id)"></button>
+      <button id="btn-8" class="btn" onclick="calculateStarRating(this.id)"></button>
     </div>
     <div class="star">
       <i class="material-icons">star_border</i>
-      <button class="btn"></button>
-      <button class="btn"></button>
+      <button id="btn-9" class="btn" onclick="calculateStarRating(this.id)"></button>
+      <button id="btn-10" class="btn" onclick="calculateStarRating(this.id)"></button>
     </div>
     <script src="index.js"></script>
   </body>
