--- a/index.html
+++ b/index.html
@@ -17,29 +17,29 @@
       <button
         id="btn-1"
         class="btn"
-        onclick="calculateStarRating(this.id)"
+        onclick="calculateStarRating(this.id, 'save')"
       ></button>
-      <button id="btn-2" class="btn" onclick="calculateStarRating(this.id)"></button>
+      <button id="btn-2" class="btn" onclick="calculateStarRating(this.id, 'save')"></button>
     </div>
     <div class="star">
       <i class="material-icons">star_border</i>
-      <button id="btn-3" class="btn" onclick="calculateStarRating(this.id)"></button>
-      <button id="btn-4" class="btn" onclick="calculateStarRating(this.id)"></button>
+      <button id="btn-3" class="btn" onclick="calculateStarRating(this.id, 'save')"></button>
+      <button id="btn-4" class="btn" onclick="calculateStarRating(this.id, 'save')"></button>
     </div>
     <div class="star">
       <i class="material-icons">star_border</i>
-      <button id="btn-5" class="btn" onclick="calculateStarRating(this.id)"></button>
-      <button id="btn-6" class="btn" onclick="calculateStarRating(this.id)"></button>
+      <button id="btn-5" class="btn" onclick="calculateStarRating(this.id, 'save')"></button>
+      <button id="btn-6" class="btn" onclick="calculateStarRating(this.id, 'save')"></button>
     </div>
     <div class="star">
       <i class="material-icons">star_border</i>
-      <button id="btn-7" class="btn" onclick="calculateStarRating(this.id)"></button>
-      <button id="btn-8" class="btn" onclick="calculateStarRating(this.id)"></button>
+      <button id="btn-7" class="btn" onclick="calculateStarRating(this.id, 'save')"></button>
+      <button id="btn-8" class="btn" onclick="calculateStarRating(this.id, 'save')"></button>
     </div>
     <div class="star">
       <i class="material-icons">star_border</i>
-      <button id="btn-9" class="btn" onclick="calculateStarRating(this.id)"></button>
-      <button id="btn-10" class="btn" onclick="calculateStarRating(this.id)"></button>
+      <button id="btn-9" class="btn" onclick="calculateStarRating(this.id, 'save')"></button>
+      <button id="btn-10" class="btn" onclick="calculateStarRating(this.id, 'save')"></button>
     </div>
     <script src="index.js"></script>
   </body>
